--- a/src/componens/Users/Users.module.css
+++ b/src/componens/Users/Users.module.css
@@ -1,6 +1,14 @@
 .ava img{
     width: 100px;
 }
-.selectedPage {
+.pageNumber.selectedPage {
     font-weight: bold;
+    border-color: black;
+}
+.pageNumber{
+    padding: 2px;
+    border: 1px solid grey;
+}
+.paginator{
+    margin: 10px;
 }
